--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/stylesheets/home.css">
 </head>
 
-<body class="d-flex text-center text-white bg-dark">
+<body class="d-flex text-white bg-dark">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="mb-auto">
             <div>
@@ -32,7 +32,7 @@
                         </div>
                     </div>
                 </nav>
-                <h1>This is the home page</h1>
+                <h1 class="text-center"> This is the home page</h1>
             </div>
         </header>
     </div>
