--- a/views/itemDetails.ejs
+++ b/views/itemDetails.ejs
@@ -1,4 +1,6 @@
 <% layout('layouts/boilerplate')%>
-<div>
-    Item details form
+<div class="container">
+    <div class="d-flex justify-content-center pb-3">
+        <h1><u>Item Details</u></h1>
+    </div>
 </div>
