--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -2,30 +2,17 @@
 <div class="container">
     <img class="mx-auto d-block mb-1" src="https://i.imgur.com/PjRChlT.png" alt="profile picture">
     <div class="text-center mb-4">
-        <p class="mb-1">Victor Ung</p>
+        <p class="mb-1">Amanda Kim</p>
         <p>Birthday: 12/8</p>
     </div>
     <div class="mb-5">
-        <div class="d-flex justify-content-between align-items-end">
-            <p>My Wishlist</p>
-            <p class="text"><a href="/addItem">add item</a></p>
+        <div>
+            <p>Wishlist</p>
         </div>
         <div class="text">
             <ul class="list-group list-group-flush">
                 <li class="list-group-item"><a href="/itemDetails">Valorant battle pass</a></li>
                 <li class="list-group-item"><a href="/itemDetails">Glitchpop 2.0 skin bundle</a></li>
-              </ul>
-        </div>
-    </div>
-    <div>
-        <div class="d-flex justify-content-between align-items-end">
-            <p>Wishlist Ideas</p>
-            <p class="text"><a href="/addList">add list</a></p>
-        </div>
-        <div class="text">
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item"><a href="/listDetails">Brian Nguyen | Birthday</a></li>
-                <li class="list-group-item"><a href="/listDetails">Pauline Woo | Christmas</a></li>
               </ul>
         </div>
     </div>
