--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -1,96 +1,104 @@
-*{
-  margin: 0;
-  padding: 0;
-  text-decoration: none;
-  font-family: montserrat;
+body {
+  background-color: #f3ebf6;
+  font-family: "Ubuntu", sans-serif;
+}
+
+.main {
+  background-color: #ffffff;
+  width: 400px;
+  height: 400px;
+  margin: 7em auto;
+  border-radius: 1.5em;
+  box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
+}
+
+.sign {
+  padding-top: 40px;
+  color: #8c55aa;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: bold;
+  font-size: 23px;
+}
+
+.un {
+  width: 76%;
+  color: rgb(38, 50, 56);
+  font-weight: 700;
+  font-size: 14px;
+  letter-spacing: 1px;
+  background: rgba(136, 126, 126, 0.04);
+  padding: 10px 20px;
+  border: none;
+  border-radius: 20px;
+  outline: none;
   box-sizing: border-box;
-}
-
-body{
-  min-height: 100vh;a
-  background-image: linear-gradient(120deg,#3498db,#8e44ad);
-}
-
-.login-form{
-  width: 360px;
-  background: #f1f1f1;
-  height: 580px;
-  padding: 80px 40px;
-  border-radius: 10px;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%,-50%);
-}
-
-.login-form h1{
+  border: 2px solid rgba(0, 0, 0, 0.02);
+  margin-bottom: 50px;
+  margin-left: 46px;
   text-align: center;
-  margin-bottom: 60px;
+  margin-bottom: 27px;
+  font-family: "Ubuntu", sans-serif;
 }
 
-.txtb{
-  border-bottom: 2px solid #adadad;
-  position: relative;
-  margin: 30px 0;
+form.form1 {
+  padding-top: 40px;
 }
 
-.txtb input{
-  font-size: 15px;
-  color: #333;
+.pass {
+  width: 76%;
+  color: rgb(38, 50, 56);
+  font-weight: 700;
+  font-size: 14px;
+  letter-spacing: 1px;
+  background: rgba(136, 126, 126, 0.04);
+  padding: 10px 20px;
   border: none;
-  width: 100%;
+  border-radius: 20px;
   outline: none;
-  background: none;
-  padding: 0 5px;
-  height: 40px;
+  box-sizing: border-box;
+  border: 2px solid rgba(0, 0, 0, 0.02);
+  margin-bottom: 50px;
+  margin-left: 46px;
+  text-align: center;
+  margin-bottom: 27px;
+  font-family: "Ubuntu", sans-serif;
 }
 
-.txtb span::before{
-  content: attr(data-placeholder);
-  position: absolute;
-  top: 50%;
-  left: 5px;
-  color: #adadad;
-  transform: translateY(-50%);
-  z-index: -1;
-  transition: .5s;
+.un:focus,
+.pass:focus {
+  border: 2px solid rgba(0, 0, 0, 0.18) !important;
 }
 
-.txtb span::after{
-  content: '';
-  position: absolute;
-  width: 0%;
-  height: 2px;
-  background: linear-gradient(120deg,#3498db,#8e44ad);
-  transition: .5s;
-}
-
-.focus + span::before{
-  top: -5px;
-}
-.focus + span::after{
-  width: 100%;
-}
-
-.logbtn{
-  display: block;
-  width: 100%;
-  height: 50px;
-  border: none;
-  background: linear-gradient(120deg,#3498db,#8e44ad,#3498db);
-  background-size: 200%;
-  color: #fff;
-  outline: none;
+.submit {
   cursor: pointer;
-  transition: .5s;
-}
-
-.logbtn:hover{
-  background-position: right;
-}
-
-.bottom-text{
-  margin-top: 60px;
-  text-align: center;
+  border-radius: 5em;
+  color: #fff;
+  background: linear-gradient(to right, #9c27b0, #e040fb);
+  border: 0;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  font-family: "Ubuntu", sans-serif;
+  margin-left: 35%;
   font-size: 13px;
+  box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
+}
+
+.forgot {
+  text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
+  color: #e1bee7;
+  padding-top: 15px;
+}
+
+a {
+  text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
+  color: #e1bee7;
+  text-decoration: none;
+}
+
+@media (max-width: 600px) {
+  .main {
+    border-radius: 0px;
+  }
 }
