--- a/views/itemDetails.ejs
+++ b/views/itemDetails.ejs
@@ -3,4 +3,24 @@
     <div class="d-flex justify-content-center pb-3">
         <h1><u>Item Details</u></h1>
     </div>
+    
+    <div class="d-flex justify-content-between align-items-end">
+        <h4><b>Name: </b></h4>
+        <p>Valorant battle pass</p>
+    </div>
+
+    <div>
+        <h4><b>Description: </b></h4>
+        <p>Literally a battle pass for the game Valorant.</p>
+    </div>
+
+    <div class="d-flex justify-content-between align-items-end">
+        <h4><b>Price: </b></h4>
+        <p>$10</p>
+    </div>
+
+    <div class="d-flex justify-content-between align-items-end">
+        <h4><b>Link: </b></h4>
+        <p><i>link</i></p>
+    </div>
 </div>
