--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,23 +1,17 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">Wishful Thinking</a>
+        <a class="navbar-brand" href="/profile">Wishful Thinking</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link" href="/">Home</a>
                 <a class="nav-link" href="/profile">Profile</a>
                 <a class="nav-link" href="/friends">Friends</a>
                 <a class="nav-link" href="/calendar">Calendar</a>
                 <a class="nav-link" href="/help">Help</a>
             </div>
-            <!-- <div class="navbar-nav ml-auto">
-                <a class="nav-link" href="/login">Login</a>
-                <a class="nav-link" href="/register">Register</a>
-                <a class="nav-link" href="/logout">Logout</a>
-            </div> -->
         </div>
     </div>
 </nav>
