--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="/stylesheets/app.css">
     <link rel="stylesheet" href="/stylesheets/calendar.css">
     <link rel="stylesheet" href="/stylesheets/help.css">    
+    <link rel="stylesheet" href="/stylesheets/friends.css">
+    <link rel="stylesheet" href="/stylesheets/addFriend.css">
 </head>
 
 <body class="d-flex flex-column vh-100">
