--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -8,7 +8,7 @@
     <div class="mb-5">
         <div class="d-flex justify-content-between align-items-end">
             <p>My Wishlist</p>
-            <p class="text"><a href="/addItem">add item</a></p>
+            <p class="text"><a href="/addWishListItem">add item</a></p>
         </div>
         <div class="text">
             <ul class="list-group list-group-flush">
