--- a/views/calendar.ejs
+++ b/views/calendar.ejs
@@ -3,37 +3,30 @@
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
-
-<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">	
 	
 	<div class="container">
+		<div class="d-flex justify-content-between">
+			<h2 class="mb-4"><u>Dates</u></h2>
+			<a href="/addDate"><button type="button" class="btn btn-success btn-sm">Add Date</button></a>
+		  </div>
 		<div class="row row-striped">
-			<div class="col-2 text-right">
+			<div class="col-md-2 text-right">
 				<h1 class="display-4"><span class="badge badge-secondary">23</span></h1>
 				<h2>OCT</h2>
 			</div>
-			<div class="col-10">
+			<div class="col-md-10">
 				<h3 class="text-uppercase"><strong>Ice Cream Social</strong></h3>
-				<ul class="list-inline">
-				    <li class="list-inline-item"><i class="fa fa-calendar-o" aria-hidden="true"></i> Monday</li>
-					<li class="list-inline-item"><i class="fa fa-clock-o" aria-hidden="true"></i> 12:30 PM - 2:00 PM</li>
-					<li class="list-inline-item"><i class="fa fa-location-arrow" aria-hidden="true"></i> Cafe</li>
-				</ul>
 				<p>Lorem ipsum dolsit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 			</div>      
 		</div>
 		<div class="row row-striped">
-			<div class="col-2 text-right">
+			<div class="col-md-2 text-right">
 				<h1 class="display-4"><span class="badge badge-secondary">27</span></h1>
 				<h2>OCT</h2>
 			</div>
-			<div class="col-10">
+			<div class="col-md-10">
 				<h3 class="text-uppercase"><strong>Operations Meeting</strong></h3>
-				<ul class="list-inline">
-				    <li class="list-inline-item"><i class="fa fa-calendar-o" aria-hidden="true"></i> Friday</li>
-					<li class="list-inline-item"><i class="fa fa-clock-o" aria-hidden="true"></i> 2:30 PM - 4:00 PM</li>
-					<li class="list-inline-item"><i class="fa fa-location-arrow" aria-hidden="true"></i> Room 4019</li>
-				</ul>
+
 				<p>Lorem ipsum dolsit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 			</div>
 		</div>
