--- a/views/listDetails.ejs
+++ b/views/listDetails.ejs
@@ -4,24 +4,24 @@
         <h1><u>List Details</u></h1>
     </div>
 
-    <div class="d-flex">
+    <div>
         <h4><b>Name: </b></h4>
         <p>Brian Nguyen</p>
     </div>
 
-    <div class="d-flex">
+    <div>
         <h4><b>Occasion: </b></h4>
         <p>Birthday</p>
     </div>
 
-    <div class="d-flex justify-content-between align-items-end">
+    <div>
         <h4><b>Date: </b></h4>
-        <p>3/29/2021</p>
+        <p>03/29/2021</p>
     </div>
 
     <div>
         <div class="d-flex justify-content-between align-items-end">
-            <h4>Items</h4>
+            <h4><b>Items:</b></h4>
             <p class="text"><a href="/addItem">add item</a></p>
         </div>
         <div class="text">
