--- a/views/addDate.ejs
+++ b/views/addDate.ejs
@@ -21,7 +21,7 @@
 
         <div class="justify-content-center btn-toolbar mt-3">
             <a href="/calendar"><button type="button" class="btn btn-danger btn-sm mr-5">Cancel</button></a>
-            <a href="/calendar"><button type="button" class="btn btn-success btn-sm">Add</button></a>
+            <a href="/addDateDummy"><button type="button" class="btn btn-success btn-sm">Add</button></a>
         </div>
     </form>
 </div>
