--- a/views/addList.ejs
+++ b/views/addList.ejs
@@ -25,7 +25,7 @@
     </form>
 
     <div class="justify-content-center btn-toolbar mt-5">
-        <a href="/listDetails"><button type="button" class="btn btn-danger btn-sm mr-5">Cancel</button></a>
-        <a href="/listDetails"><button type="button" class="btn btn-success btn-sm">Add</button></a>
+        <a href="/profile"><button type="button" class="btn btn-danger btn-sm mr-5">Cancel</button></a>
+        <a href="/addListDummy"><button type="button" class="btn btn-success btn-sm">Add</button></a>
     </div>
 </div>
