--- a/views/addListDummy.ejs
+++ b/views/addListDummy.ejs
@@ -27,6 +27,7 @@
             <ul class="list-group list-group-flush">
                 <li class="list-group-item"><a href="/listDetails">Brian Nguyen | Birthday</a></li>
                 <li class="list-group-item"><a href="/listDetails">Pauline Woo | Christmas</a></li>
+                <li class="list-group-item"><a href="/listDetails">New List | Occasion</a></li>
               </ul>
         </div>
     </div>
