--- a/views/editProfileDummy.ejs
+++ b/views/editProfileDummy.ejs
@@ -1,10 +1,10 @@
 <% layout('layouts/boilerplate')%>
 <div class="container">
     <a href="/editProfile" class="d-flex justify-content-end mb-3"><img src="https://i.imgur.com/dZq6GOm.png" alt="" width="40"></a>
-    <img class="mx-auto d-block mb-1" src="https://i.imgur.com/PXb4HGt.png" alt="profile picture">
+    <img class="mx-auto d-block mb-1" src="https://i.imgur.com/ogNwYVl.jpg" alt="profile picture" width="100">
     <div class="text-center mb-4">
-        <p class="mb-1">Victor Ung</p>
-        <p>Birthday: 12/8</p>
+        <p class="mb-1">Victor Miram Ung</p>
+        <p>Birthday: 4/10</p>
     </div>
     <div class="mb-5">
         <div class="d-flex justify-content-between align-items-end">
