--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,18 +17,6 @@
                 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="/profile">Wishful Thinking</a>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                            <div class="navbar-nav">
-                                <a class="nav-link" href="/profile">Profile</a>
-                                <a class="nav-link" href="/friends">Friends</a>
-                                <a class="nav-link" href="/calendar">Calendar</a>
-                                <a class="nav-link" href="/help">Help</a>
-                            </div>
-                        </div>
                     </div>
                 </nav>
                 <div class="main">
@@ -37,7 +25,7 @@
                     <input class="un " type="text" align="center" placeholder="Username">
                     <input class="pass" type="password" align="center" placeholder="Password">
                     <a class="submit" align="center" href="/profile">Sign in</a>
-                    <p class="forgot" align="center"><a href="#">Forgot Password?</p>
+                    <!-- <p class="forgot" align="center"><a href="#">Forgot Password?</p> -->
                   </div>
             </div>
         </header>
