--- a/views/addDateDummy.ejs
+++ b/views/addDateDummy.ejs
@@ -22,5 +22,15 @@
 			</div>
 		<% } %>
 		  
+		<div class="row row-striped">
+			<div class="col-md-2 text-right">
+				<h1 class="display-5"><span class="badge badge-secondary">31</span></h1>
+				<h4>DEC</h4>
+			</div>
+			<div class="col-md-10">
+				<h3 class="text-uppercase"><strong>Holiday Party</strong></h3>
+                <p>Virtual Holiday party with coworkers. Wear festive colors!</p>
+			</div>      
+		</div>
 	</div>
 	
