--- a/views/addItem.ejs
+++ b/views/addItem.ejs
@@ -27,6 +27,6 @@
 
     <div class="justify-content-center btn-toolbar mt-5">
         <a href="/listDetails"><button type="button" class="btn btn-danger btn-sm mr-5">Cancel</button></a>
-        <a href="/listDetails"><button type="button" class="btn btn-success btn-sm">Add</button></a>
+        <a href="/addItemDummy"><button type="button" class="btn btn-success btn-sm">Add</button></a>
     </div>
 </div>
