--- a/views/addWishlistItemDummy.ejs
+++ b/views/addWishlistItemDummy.ejs
@@ -15,6 +15,7 @@
             <ul class="list-group list-group-flush">
                 <li class="list-group-item"><a href="/itemDetails">Valorant battle pass</a></li>
                 <li class="list-group-item"><a href="/itemDetails">Glitchpop 2.0 skin bundle</a></li>
+                <li class="list-group-item"><a href="/itemDetails">New Item</a></li>
               </ul>
         </div>
     </div>
