--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,6 +11,7 @@
                 <a class="nav-link" href="/friends">Friends</a>
                 <a class="nav-link" href="/calendar">Calendar</a>
                 <a class="nav-link" href="/help">Help</a>
+                <a class="nav-link" href="/signout">Sign Out</a>
             </div>
         </div>
     </div>
