--- a/views/addWishListItem.ejs
+++ b/views/addWishListItem.ejs
@@ -27,6 +27,6 @@
 
     <div class="justify-content-center btn-toolbar mt-5">
         <a href="/profile"><button type="button" class="btn btn-danger btn-sm mr-5">Cancel</button></a>
-        <a href="/addWishlistItemDummy"><button type="button" class="btn btn-success btn-sm">Add</button></a>
+        <a href="/addWishListItemDummy"><button type="button" class="btn btn-success btn-sm">Add</button></a>
     </div>
 </div>
