--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,7 @@
             <div>
                 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="/profile">Wishful Thinking</a>
+                        <a class="navbar-brand" href="#">Wishful Thinking</a>
                     </div>
                 </nav>
                 <div class="main">
