--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="/stylesheets/help.css">    
     <link rel="stylesheet" href="/stylesheets/friends.css">
     <link rel="stylesheet" href="/stylesheets/addFriend.css">
+    <link rel="stylesheet" href="/stylesheets/search.css">
 </head>
 
 <body class="d-flex flex-column vh-100">
