--- a/views/listItemDetails.ejs
+++ b/views/listItemDetails.ejs
@@ -5,7 +5,7 @@
     </div>
     <div>
         <h4><b>Name: </b></h4>
-        <p><%=itemDetail.itemName%></p>
+        <p><%=itemDetail.name%></p>
     </div>
     <div>
         <h4><b>Description: </b></h4>
