--- a/views/addItem.ejs
+++ b/views/addItem.ejs
@@ -3,30 +3,31 @@
     <div class="d-flex justify-content-center pb-3">
         <h1><u>Add Item</u></h1>
     </div>
-    <form>
+    <form method="GET" action="/addFriendItem/<%=name%>">
         <div class="form-group">
         <label for="exampleFormControlInput1">Name:</label>
-        <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Item name">
+        <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Item name" name="name">
         </div>
         
         <div class="form-group mt-3">
         <label for="exampleFormControlTextarea1">Description:</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Item description" name="description">
         </div>
 
         <div class="form-group mt-3">
             <label for="exampleFormControlInput1">Price:</label>
-            <input type="price" class="form-control" id="exampleFormControlInput1" placeholder="USD">
+            <input type="price" class="form-control" id="exampleFormControlInput1" placeholder="USD" name="price">
         </div>
 
         <div class="form-group mt-3">
             <label for="exampleFormControlInput1">Link:</label>
-            <input type="link" class="form-control" id="exampleFormControlInput1" placeholder="Link to item">
+            <input type="link" class="form-control" id="exampleFormControlInput1" placeholder="Link to item" name="link">
+        </div>
+        <div class="justify-content-center btn-toolbar mt-5">
+            <a href="/listDetails"><button type="button" class="btn btn-danger btn-sm mr-5">Cancel</button></a>
+            <input type="submit" class="btn btn-success btn-sm">
         </div>
     </form>
 
-    <div class="justify-content-center btn-toolbar mt-5">
-        <a href="/listDetails"><button type="button" class="btn btn-danger btn-sm mr-5">Cancel</button></a>
-        <a href="/addItemDummy"><button type="button" class="btn btn-success btn-sm">Add</button></a>
-    </div>
+
 </div>
