--- a/views/addList.ejs
+++ b/views/addList.ejs
@@ -3,14 +3,14 @@
     <div class="d-flex justify-content-center pb-3">
         <h1><u>Add List</u></h1>
     </div>
-    <form>
+    <form method="get" action="/addMyList">
         <div class="form-group">
             <label for="exampleFormControlInput1">Name:</label>
-            <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Name of person the list is for">
+            <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Name of person the list is for"  name="name">
         </div>
         <div class="form-group mt-3">
             <label for="exampleFormControlSelect1">Occasion:</label>
-            <select class="form-control" id="exampleFormControlSelect1">
+            <select class="form-control" id="exampleFormControlSelect1" name="occasion">
                 <option>Birthday</option>
                 <option>Anniversary</option>
                 <option>Christmas</option>
@@ -20,12 +20,13 @@
         </div>
         <div class="form-group mt-3">
             <label for="exampleFormControlInput1">Date:</label>
-            <input type="date" class="form-control" id="exampleFormControlInput1" placeholder="MM/DD/YYYY">
-        </div>        
-    </form>
+            <input type="date" class="form-control" id="exampleFormControlInput1" placeholder="MM/DD/YYYY" name="date">
+        </div>       
 
     <div class="justify-content-center btn-toolbar mt-5">
         <a href="/profile"><button type="button" class="btn btn-danger btn-sm mr-5">Cancel</button></a>
-        <a href="/addListDummy"><button type="button" class="btn btn-success btn-sm">Add</button></a>
+        <input type="submit" class="btn btn-success btn-sm">
     </div>
+    </form>
+
 </div>
