--- a/views/listDetails.ejs
+++ b/views/listDetails.ejs
@@ -6,28 +6,31 @@
 
     <div>
         <h4><b>Name: </b></h4>
-        <p>Brian Nguyen</p>
+        <p><%=wishlistDetails.name%></p>
     </div>
 
     <div>
         <h4><b>Occasion: </b></h4>
-        <p>Birthday</p>
+        <p><%=wishlistDetails.occasion%></p>
     </div>
 
     <div>
         <h4><b>Date: </b></h4>
-        <p>03/29/2021</p>
+        <p><%=wishlistDetails.date%></p>
     </div>
 
     <div>
         <div class="d-flex justify-content-between align-items-end">
             <h4><b>Items:</b></h4>
-            <p class="text"><a href="/addItem">add item</a></p>
+            <p class="text"><a href="/addItem/<%=wishlistDetails.name%>">add item</a></p>
         </div>
         <div class="text">
             <ul class="list-group list-group-flush">
-                <li class="list-group-item"><a href="/itemDetails">Squishmallow</a></li>
-                <li class="list-group-item"><a href="/itemDetails">Glitchpop 2.0 skin bundle</a></li>
+                <% if (wishlistDetails.items) { %>
+                    <% for (let item of wishlistDetails.items ){%>
+                        <li class="list-group-item"><a href="/listItemDetails/<%=wishlistDetails.name%>/<%=item.name%>"><%=item.name%></a></li>
+                    <% } %>
+                <% } %>
               </ul>
         </div>
     </div>
