--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,10 +2,10 @@
 
 <div class="container">
     <a href="/editProfile" class="d-flex justify-content-end mb-3"><img src="https://i.imgur.com/dZq6GOm.png" alt="" width="40"></a>
-    <img class="mx-auto d-block mb-1" src="https://i.imgur.com/PXb4HGt.png" id="profile_picture" alt="profile picture">
+    <img class="mx-auto d-block mb-1" src="<%=data.me.profileImage%>" id="profile_picture" alt="profile picture" width="100">
     <div class="text-center mb-4">
-        <p class="mb-1" id="name">Victor Ung</p>
-        <p>Birthday: 12/8</p>
+        <p class="mb-1"><%=data.me.name%></p>
+        <p>Birthday: <%=data.me.birthday%></p>
     </div>
     <div class="mb-5">
         <div class="d-flex justify-content-between align-items-end">
@@ -14,8 +14,9 @@
         </div>
         <div class="text">
             <ul class="list-group list-group-flush">
-                <li class="list-group-item"><a href="/itemDetails">Valorant battle pass</a></li>
-                <li class="list-group-item"><a href="/itemDetails">Glitchpop 2.0 skin bundle</a></li>
+                    <% for (let wishlist of data.me.wishlist ){%>
+                        <li class="list-group-item"><a href="/itemDetails/<%=wishlist.name%>"><%=wishlist.name%></a></li>
+                    <% } %>
               </ul>
         </div>
     </div>
@@ -26,8 +27,9 @@
         </div>
         <div class="text">
             <ul class="list-group list-group-flush">
-                <li class="list-group-item"><a href="/listDetails">Brian Nguyen | Birthday</a></li>
-                <li class="list-group-item"><a href="/listDetails">Pauline Woo | Christmas</a></li>
+                <% for (let wishlist of data.me.wishlistIdeas ){%>
+                    <li class="list-group-item"><a href="/listDetails/<%=wishlist.name%>"><%=wishlist.name%> | <%=wishlist.occasion%></a></li>
+                <% } %>
               </ul>
         </div>
     </div>
@@ -40,7 +42,10 @@
 
     const index = url_string.indexOf("profile_pic") + 12;
     const picture_url = url_string.substring(index);
-    console.log(picture_url);
+    
+    if (picture_url == "lhost:3000/profile") {
+        picture_url = undefined;
+    }
 
     const picture = picture_url || "https://i.imgur.com/PXb4HGt.png";
     console.log(name);
