--- a/public/stylesheets/friends.css
+++ b/public/stylesheets/friends.css
@@ -4,11 +4,17 @@
 } */
 
 .top {
-  text-align: center;
+    text-align: center;
 }
 
 .shadow {
-  box-shadow: 0px 0px 5px 0px;
-  padding-top: 10px;
+    box-shadow: 0px 0px 5px 0px;
+    padding-top: 10px;
 }
-/* s
+
+.notsu {
+    color: red;
+}
+.btn_s {
+    color: green;
+}
