--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,10 +1,11 @@
 <% layout('layouts/boilerplate')%>
-
+<script type="text/javascript" src="data.json"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <div class="container">
     <a href="/editProfile" class="d-flex justify-content-end mb-3"><img src="https://i.imgur.com/dZq6GOm.png" alt="" width="40"></a>
-    <img class="mx-auto d-block mb-1" src="<%=data.me.profileImage%>" id="profile_picture" alt="profile picture" width="100">
+    <img class="mx-auto d-block mb-1" src="<%=data.me.profileImage%>" id="photo" alt="profile picture" width="100">
     <div class="text-center mb-4">
-        <p class="mb-1"><%=data.me.name%></p>
+        <p id="name" class="mb-1"><%=data.me.name%></p>
         <p>Birthday: <%=data.me.birthday%></p>
     </div>
     <div class="mb-5">
@@ -34,23 +35,3 @@
         </div>
     </div>
 </div>
-<script>
-    const url_string = window.location.href;
-    console.log(url_string);
-    const url = new URL(url_string);
-    const name = url.searchParams.get("name") || "Brian Nguyen";
-
-    const index = url_string.indexOf("profile_pic") + 12;
-    const picture_url = url_string.substring(index);
-    
-    if (picture_url == "lhost:3000/profile") {
-        picture_url = undefined;
-    }
-
-    const picture = picture_url || "https://i.imgur.com/PXb4HGt.png";
-    console.log(name);
-    console.log(picture);
-    document.getElementById("name").innerHTML = name;
-    document.getElementById("profile_picture").src = picture;
-
-</script>
