--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,3 +1,5 @@
+<script src="./js/facebook.js"></script>
+
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="/profile">Wishful Thinking</a>
@@ -11,7 +13,7 @@
                 <a class="nav-link" href="/friends">Friends</a>
                 <a class="nav-link" href="/calendar">Calendar</a>
                 <a class="nav-link" href="/help">Help</a>
-                <a class="nav-link" href="/signout">Sign Out</a>
+                <a onclick="logout()" class="nav-link" href="/signout">Sign Out</a>
             </div>
         </div>
     </div>
